<?xml version="1.0"?>
<package format="3">
  <name>ros2_dds_camera_benchmark</name>
  <version>0.1.0</version>
  <description>ROS 2 DDS Camera Transport Benchmark</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
</package>
